Fixed the landing hero band text having an overflow on mobile screens

--- a/_sass/includes/homepage-hero-band.scss
+++ b/_sass/includes/homepage-hero-band.scss
@@ -48,7 +48,16 @@
 
     .light-blue { color:$quarkus-blue; }
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 1024px) {
+    grid-column: span 12;
+     
+       h2 {
+       font-size: 5rem;
+       line-height: 5rem;
+       }
+    }
+
+    @media screen and (max-width: 768px) {
     grid-column: span 12;
      
        h2 {
@@ -57,14 +66,42 @@
        }
     }
 
-    @media screen and (max-width: 600px) {
-    grid-column: span 12;
-     
-       h2 {
-       font-size: 4rem;
-       line-height: 3.9rem;
-       }
+    @media screen and (max-width: 550px) {
+      grid-column: span 12;
+
+      h2 {
+        font-size: 3.8rem;
+        line-height: 4rem;
+      }
     }
+
+    @media screen and (max-width: 425px) {
+      grid-column: span 12;
+
+      h2 {
+        font-size: 3rem;
+        line-height: 3.65rem;
+      }
+    }
+
+    @media screen and (max-width: 375px) {
+    grid-column: span 12;
+        
+        h2 {
+        font-size: 2.8rem;
+        line-height: 3.5rem;
+      }
+    }
+
+    @media screen and (max-width: 320px) {
+      grid-column: span 12;
+        
+        h2 {
+        font-size: 2.5rem;
+        line-height: 3.5rem;
+      }
+    }
+
   }
 
 
